gitops/apps/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
  namespace: it-tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - it-tools.apocalypso.xyz
      secretName: it-tools-tls
  rules:
    - host: it-tools.apocalypso.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools
                port:
                  number: 80
